Envoy/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:

  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/weatherforecast"
                route:
                  prefix_rewrite: "/weatherforecast"
                  cluster: weather_service
              - match:
                  prefix: "/activityrecommend"
                route:
                  prefix_rewrite: "/activityrecommend"
                  cluster: activity_service
  clusters:
  - name: weather_service
    connect_timeout: 15s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    #lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: weather_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: serviceone
                port_value: 80
  - name: activity_service
    connect_timeout: 15s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: activity_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: servicetwo
                port_value: 80
